yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # 部署名称
  name: surge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: surge
  # 定义 Pod 相关数据
  template:
    metadata:
      labels:
        app: surge
    spec:
      # 定义容器，可以多个
      containers:
        - name: surge  # 容器名字
          image: 192.168.56.1:8082/surge:0.0.3-RELEASE # 镜像
