yaml/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: k8s.lingjin.com
      http:
        paths:
          - path: /
            backend:
              serviceName: surge
              servicePort: 9999
# 先下载ingress controller才能生效
