yaml/surge.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # 部署名称
  name: surge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: surge
  # 定义 Pod 相关数据
  template:
    metadata:
      labels:
        app: surge
    spec:
      # 定义容器，可以多个
      containers:
        - name: surge  # 容器名字
          image: 192.168.56.1:8082/surge:0.0.1-RELEASE # 镜像
          imagePullPolicy: IfNotPresent
          # 环境变量,可替代掉application.yml的配置
---
apiVersion: v1
kind: Service
metadata:
  name: surge
spec:
  selector:
    # 通过label surge 对应 pod的label
    app: surge
  # https://blog.csdn.net/weixin_44267608/article/details/102728050
  # NodePort | Ingress | LoadBalancer
  type: NodePort  # 用k8s集群任意node的nodePort端口访问到这个服务
  ports:
    - port: 9999 # service端口
      targetPort: 9884 # 容器端口: 访问service的端口,转发到pod的哪个端口上
      nodePort: 31000  # 节点端口，范围固定 30000 ~ 32767 ,不设置会自动分配一个port
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: k8s.lingjin.com
      http:
        paths:
          - path: /
            backend:
              serviceName: surge
              servicePort: 9999
